--- a/index.html
+++ b/index.html
@@ -124,6 +124,62 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-29">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-29-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="4月29日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-29-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月29日→18.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、香港、美国、欧洲、加拿大、日本、韩国等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-28">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-28-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-28-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月28日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、韩国、美国、香港、欧洲、加拿大等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-27">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-27-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="4月27日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-27-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月27日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、日本、欧洲、香港、新加坡、韩国、美国等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-26-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="4月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-26-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、日本、韩国、美国、新加坡、香港、欧洲等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-25">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-25-free-subscribe-node.htm" class="xcblog-blog-url">
@@ -348,62 +404,6 @@
                                     这一次的节点更新覆盖了美国、新加坡、加拿大、香港、欧洲、韩国、日本等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-6-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-6-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、美国、欧洲、新加坡、日本、加拿大、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了新加坡、日本、美国、欧洲、加拿大、韩国、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、香港、美国、加拿大、日本、韩国、新加坡等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-3-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-3-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、香港、新加坡、欧洲、美国、日本等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -413,16 +413,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-3-30-free-subscribe-node.htm" title="3月30日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月30日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
-                        <li class="py-2"><a href="/news/article-81602.htm" title="宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）">宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）</a></li>
-                        <li class="py-2"><a href="/news/article-68199.htm" title="开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）">开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）</a></li>
-                        <li class="py-2"><a href="/news/article-101270.htm" title="Python实现双X轴双Y轴绘图">Python实现双X轴双Y轴绘图</a></li>
-                        <li class="py-2"><a href="/news/article-70777.htm" title="瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）">瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）</a></li>
-                        <li class="py-2"><a href="/news/article-85166.htm" title="Docker基础DockerFile文件详解">Docker基础DockerFile文件详解</a></li>
-                        <li class="py-2"><a href="/news/article-72757.htm" title="我所在的城市里有一家宠物医院的英文怎么写（在我的城市里有一家宠物医院的英语）">我所在的城市里有一家宠物医院的英文怎么写（在我的城市里有一家宠物医院的英语）</a></li>
-                        <li class="py-2"><a href="/news/article-67538.htm" title="正则表达式\ip地址匹配方法">正则表达式\ip地址匹配方法</a></li>
+                        <li class="py-2"><a href="/news/article-95454.htm" title="重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）">重庆领养猫咪宠物平台（重庆领养猫咪宠物平台有哪些）</a></li>
+                        <li class="py-2"><a href="/news/article-74768.htm" title="动物医院游戏破解版 动物医院游戏破解版无限金币爱心">动物医院游戏破解版 动物医院游戏破解版无限金币爱心</a></li>
+                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
+                        <li class="py-2"><a href="/news/article-99127.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-12-free-node-subscribe.htm" title="3月12日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址">3月12日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-86600.htm" title="领养宠物协议书范本大全最新下载（领养宠物协议书在法律上属于什么合同）">领养宠物协议书范本大全最新下载（领养宠物协议书在法律上属于什么合同）</a></li>
+                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
+                        <li class="py-2"><a href="/news/article-97655.htm" title="广州宠物领养微信群号 广州宠物领养微信群号是多少">广州宠物领养微信群号 广州宠物领养微信群号是多少</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe-links.htm" title="3月22日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月22日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-21-free-high-speed-nodes.htm" title="3月21日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月21日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -434,7 +434,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
