--- a/about-us.htm
+++ b/about-us.htm
@@ -139,16 +139,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-70131.htm" title="vue+Element实现登录随机验证码_vue.js_">vue+Element实现登录随机验证码_vue.js_</a></li>
-                        <li class="py-2"><a href="/news/article-88048.htm" title="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</a></li>
+                        <li class="py-2"><a href="/news/article-72093.htm" title="动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）">动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）</a></li>
+                        <li class="py-2"><a href="/news/article-80207.htm" title="奥尔良牛肉汉堡的做法大全(奥尔良牛肉汉堡的做法视频)">奥尔良牛肉汉堡的做法大全(奥尔良牛肉汉堡的做法视频)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-2-node-share.htm" title="3月2日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址">3月2日→18.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" title="4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-68837.htm" title="动物疫苗是有毒有害吗（动物疫苗的重要性）">动物疫苗是有毒有害吗（动物疫苗的重要性）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-node-share-links.htm" title="3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址">3月26日→21.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-78153.htm" title="宠物粮食在哪里进货好卖呢视频（宠物粮进货平台）">宠物粮食在哪里进货好卖呢视频（宠物粮进货平台）</a></li>
-                        <li class="py-2"><a href="/news/article-99127.htm" title="宠物粮市场前景如何分析的（宠物粮行业）">宠物粮市场前景如何分析的（宠物粮行业）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-22-free-high-speed-nodes.htm" title="4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月22日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-76791.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
-                        <li class="py-2"><a href="/news/article-79532.htm" title="php redis 二进制,关于php:PHP操作redis中bitMap">php redis 二进制,关于php:PHP操作redis中bitMap</a></li>
-                        <li class="py-2"><a href="/news/article-69486.htm" title="被宠物猫抓了一下出一点点血（被宠物猫抓一点点血没事吧）">被宠物猫抓了一下出一点点血（被宠物猫抓一点点血没事吧）</a></li>
-                        <li class="py-2"><a href="/news/article-92438.htm" title="vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】">vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】</a></li>
+                        <li class="py-2"><a href="/news/article-99911.htm" title="中国宠物食品排名（中国宠物食品排名榜）">中国宠物食品排名（中国宠物食品排名榜）</a></li>
+                        <li class="py-2"><a href="/news/article-74767.htm" title="动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）">动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）</a></li>
+                        <li class="py-2"><a href="/news/article-79533.htm" title="兰州狗狗市场（兰州市的狗市场在哪）">兰州狗狗市场（兰州市的狗市场在哪）</a></li>
                     </ul>
     </div>
 </div>
@@ -160,7 +160,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
