--- a/client.htm
+++ b/client.htm
@@ -290,16 +290,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-86598.htm" title="买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）">买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/news/article-93200.htm" title="vue的自动化路由+分模块管理+路由懒加载">vue的自动化路由+分模块管理+路由懒加载</a></li>
-                        <li class="py-2"><a href="/news/article-100649.htm" title="中国十大宠物食品公司 中国十大宠物食品公司排名">中国十大宠物食品公司 中国十大宠物食品公司排名</a></li>
-                        <li class="py-2"><a href="/news/article-103643.htm" title="vue日期格式处理详解">vue日期格式处理详解</a></li>
-                        <li class="py-2"><a href="/news/article-83734.htm" title="动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集">动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-node-subscribe-links.htm" title="3月10日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月10日→19.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-84441.htm" title="打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）">打疫苗的时候又被动物抓伤了怎么办?（被打了疫苗的动物咬了）</a></li>
-                        <li class="py-2"><a href="/news/article-88765.htm" title="兽医疫苗批号查询系统（兽用疫苗真伪查询）">兽医疫苗批号查询系统（兽用疫苗真伪查询）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" title="4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" title="4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-90252.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-8-free-subscribe-node.htm" title="3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">3月8日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-79532.htm" title="php redis 二进制,关于php:PHP操作redis中bitMap">php redis 二进制,关于php:PHP操作redis中bitMap</a></li>
+                        <li class="py-2"><a href="/news/article-103647.htm" title="使用etcd选举sdk实践master/slave故障转移_在线工具">使用etcd选举sdk实践master/slave故障转移_在线工具</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-107024.htm" title="微信小程序开发笔记2——自定义导航栏组件">微信小程序开发笔记2——自定义导航栏组件</a></li>
+                        <li class="py-2"><a href="/news/article-101271.htm" title="沧州卖宠物的地方（沧州哪里有宠物店）">沧州卖宠物的地方（沧州哪里有宠物店）</a></li>
+                        <li class="py-2"><a href="/news/article-94194.htm" title="动物疫苗市场竞争（动物疫苗行业）">动物疫苗市场竞争（动物疫苗行业）</a></li>
                     </ul>
     </div>
 </div>
@@ -311,7 +311,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
