--- a/date/2025-03/index.htm
+++ b/date/2025-03/index.htm
@@ -275,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-3-free-subscribe-node.htm" title="4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-free-node-subscribe.htm" title="3月11日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月11日→22.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-92439.htm" title="深圳市宠物领养之家官网查询电话（深圳宠物领养平台）">深圳市宠物领养之家官网查询电话（深圳宠物领养平台）</a></li>
+                        <li class="py-2"><a href="/news/article-73430.htm" title="EF Core 的 Code First 模式">EF Core 的 Code First 模式</a></li>
                         <li class="py-2"><a href="/news/article-100649.htm" title="中国十大宠物食品公司 中国十大宠物食品公司排名">中国十大宠物食品公司 中国十大宠物食品公司排名</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-27-node-share-links.htm" title="3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-12-free-node-subscribe-links.htm" title="4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">4月12日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-74767.htm" title="动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）">动物疫控中心可以打疫苗吗（动物疾控中心可以打疫苗吗）</a></li>
-                        <li class="py-2"><a href="/news/article-77470.htm" title="成都宠物领养平台电话是多少号码（成都宠物领养中心电话）">成都宠物领养平台电话是多少号码（成都宠物领养中心电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-subscribe-node.htm" title="3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-17-free-node-subscribe.htm" title="3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月17日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe-links.htm" title="3月22日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月22日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-91721.htm" title="liunx中搭建python3.7环境和安装pycharm并搭建Django">liunx中搭建python3.7环境和安装pycharm并搭建Django</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-74768.htm" title="动物医院游戏破解版 动物医院游戏破解版无限金币爱心">动物医院游戏破解版 动物医院游戏破解版无限金币爱心</a></li>
+                        <li class="py-2"><a href="/news/article-87314.htm" title="动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）">动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）</a></li>
+                        <li class="py-2"><a href="/news/article-80926.htm" title="深圳宠物领养中心在哪个位置呀 深圳宠物领养中心在哪个位置呀电话">深圳宠物领养中心在哪个位置呀 深圳宠物领养中心在哪个位置呀电话</a></li>
                     </ul>
     </div>
 </div>
@@ -296,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
