--- a/date/2025-04/page-8.htm
+++ b/date/2025-04/page-8.htm
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io" />
-    <title>2025-04归档 - 第7页 - Sockscap64免费机场节点分享官网</title>
+    <title>2025-04归档 - 第9页 - Sockscap64免费机场节点分享官网</title>
         <meta name="keywords" content="2025-04归档Sockscap64免费机场节点分享官网" />
-        <meta name="description" content="2025-04归档，当前是第7页" />
+        <meta name="description" content="2025-04归档，当前是第9页" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="2025-04归档 - 第7页 - Sockscap64免费机场节点分享官网" />
+    <meta property="og:title" content="2025-04归档 - 第9页 - Sockscap64免费机场节点分享官网" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
-        <meta property="og:description" content="2025-04归档，当前是第7页" />
+        <meta property="og:description" content="2025-04归档，当前是第9页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="2025-04归档 - 第7页 - Sockscap64免费机场节点分享官网">
+    <meta name="apple-mobile-web-app-title" content="2025-04归档 - 第9页 - Sockscap64免费机场节点分享官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -125,36 +125,148 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
                             <div class="col-md-3">
-                                <a href="/news/article-85880.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="深度学习Pytorch——神经网络" style="width:100%;">
+                                <a href="/news/article-88765.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="兽医疫苗批号查询系统（兽用疫苗真伪查询）" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/news/article-85880.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">深度学习Pytorch——神经网络</h3>
+                                <a href="/news/article-88765.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">兽医疫苗批号查询系统（兽用疫苗真伪查询）</h3>
                                 </a>
                                 <p>
-                                    文章目录  深度学习Pytorch（三）——神经网络   一、简介 二、神经网络训练过程 三、实例演示   1、定义一个神经网络 2、通过调用net.parameters()返回模型可训练的参数 3、                                </p>
+                                    摘要：       今天给各位分享兽医疫苗批号查询系统的知识，其中也会对兽用疫苗真伪查询进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物疫苗接种记录在手机.                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-04-01">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
                             <div class="col-md-3">
-                                <a href="/free-nodes/2025-4-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
                                 </a>
                             </div>
                             <div class="col-md-9">
-                                <a href="/free-nodes/2025-4-1-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月5日→21.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
                                 </a>
                                 <p>
-                                    这一次的节点更新覆盖了加拿大、美国、新加坡、香港、欧洲、韩国、日本等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                                    这一次的节点更新覆盖了新加坡、日本、美国、欧洲、加拿大、韩国、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-88048.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-88048.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</h3>
+                                </a>
+                                <p>
+                                    葱白煮水治怎么做？ 葱白煮水是常见的中药治疗感冒的方法，它具有开窍散寒、清热解毒的功效，而且操作简单、价格低廉，是家庭感冒应急的好伴侣。下面我们就来详细了解一下葱白煮水治感冒的做法。  准备材料 葱白                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/news/article-88047.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="vue实现列表拖拽排序的示例代码_vue.js" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-88047.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">vue实现列表拖拽排序的示例代码_vue.js</h3>
+                                </a>
+                                <p>
+                                     本文主要介绍了vue实现列表拖拽排序的示例代码，具体如下：   &lt;template&gt;    &lt;div class="test_wrapper" @dragover="dragove                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月4日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、香港、美国、加拿大、日本、韩国、新加坡等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-3-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-3-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月3日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、香港、新加坡、欧洲、美国、日本等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-87315.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/83fc4ed0956827536cee5316dc8ae409.webp" alt="动物疫苗接种简报标题新颖（动物预防接种计划表）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87315.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">动物疫苗接种简报标题新颖（动物预防接种计划表）</h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享动物疫苗接种简报标题新颖的知识，其中也会对动物预防接种计划表进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、疫苗接种宣传标语.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-87314.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-87314.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈动物疫苗证明哪里开的啊，以及动物疫苗证去哪里办怎么办对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗的健康证,免疫证在哪里办理?...                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-86600.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="领养宠物协议书范本大全最新下载（领养宠物协议书在法律上属于什么合同）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-86600.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">领养宠物协议书范本大全最新下载（领养宠物协议书在法律上属于什么合同）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈领养宠物协议书范本大全最新下载，以及领养宠物协议书在法律上属于什么合同对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、解除关系协议书...                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-86598.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-86598.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈买一个宠物狗粮食，以及买一点普通的狗粮多少钱一斤对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、什么狗粮便宜又好2、...                                        </p>
                             </div>
                         </div>
                         
-                        <ul class="pagination"><li><a href="/date/2025-04/page-7.htm">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li><a href="/date/2025-04/page-2.htm">2</a></li><li><a href="/date/2025-04/page-3.htm">3</a></li><li><a href="/date/2025-04/page-4.htm">4</a></li><li><a href="/date/2025-04/page-5.htm">5</a></li><li><a href="/date/2025-04/page-6.htm">6</a></li><li><a href="/date/2025-04/page-7.htm">7</a></li><li class="active"><span>8</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
+                        <ul class="pagination"><li><a href="/date/2025-04/page-7.htm">&laquo;</a></li> <li><a href="/date/2025-04/">1</a></li><li><a href="/date/2025-04/page-2.htm">2</a></li><li><a href="/date/2025-04/page-3.htm">3</a></li><li><a href="/date/2025-04/page-4.htm">4</a></li><li><a href="/date/2025-04/page-5.htm">5</a></li><li><a href="/date/2025-04/page-6.htm">6</a></li><li><a href="/date/2025-04/page-7.htm">7</a></li><li class="active"><span>8</span></li><li><a href="/date/2025-04/page-9.htm">9</a></li> <li><a href="/date/2025-04/page-9.htm">&raquo;</a></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -163,16 +275,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-10-free-node-subscribe-links.htm" title="4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址">4月10日→22M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-90252.htm" title="上海宠物医院有多少家分院啊（上海宠物医院知乎）">上海宠物医院有多少家分院啊（上海宠物医院知乎）</a></li>
-                        <li class="py-2"><a href="/news/article-66931.htm" title="米乐医疗科技有限公司怎么样（米乐集团是干什么的）">米乐医疗科技有限公司怎么样（米乐集团是干什么的）</a></li>
-                        <li class="py-2"><a href="/news/article-68836.htm" title="动物疫苗法规制定 动物疫苗法规制定依据">动物疫苗法规制定 动物疫苗法规制定依据</a></li>
+                        <li class="py-2"><a href="/news/article-87314.htm" title="动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）">动物疫苗证明哪里开的啊（动物疫苗证去哪里办怎么办）</a></li>
+                        <li class="py-2"><a href="/news/article-79532.htm" title="php redis 二进制,关于php:PHP操作redis中bitMap">php redis 二进制,关于php:PHP操作redis中bitMap</a></li>
+                        <li class="py-2"><a href="/news/article-68199.htm" title="开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）">开宠物用品店挣钱吗现在（开宠物用品店需要准备什么）</a></li>
+                        <li class="py-2"><a href="/news/article-78152.htm" title="vue 使用echarts绘制折线图">vue 使用echarts绘制折线图</a></li>
+                        <li class="py-2"><a href="/news/article-81602.htm" title="宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）">宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-3-25-free-node-subscribe.htm" title="3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-1-free-node-subscribe-links.htm" title="4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">4月1日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-71441.htm" title="宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）">宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）</a></li>
-                        <li class="py-2"><a href="/news/article-99910.htm" title="宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）">宠物买卖交易合法吗（宠物买卖交易合法吗安全吗）</a></li>
+                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
+                        <li class="py-2"><a href="/news/article-74095.htm" title="妙三多是几联（妙三多是几联疫苗）">妙三多是几联（妙三多是几联疫苗）</a></li>
+                        <li class="py-2"><a href="/news/article-91049.htm" title="集成神经网络的缺点是,各种神经网络的优缺点">集成神经网络的缺点是,各种神经网络的优缺点</a></li>
+                        <li class="py-2"><a href="/news/article-94704.htm" title="动物疫苗研究员工资 动物疫苗研究员工资多少">动物疫苗研究员工资 动物疫苗研究员工资多少</a></li>
                     </ul>
     </div>
 </div>
@@ -184,7 +296,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
