--- a/privacy.htm
+++ b/privacy.htm
@@ -177,16 +177,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-72094.htm" title="被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）">被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-free-subscribe-node.htm" title="4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址">4月7日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-91722.htm" title="vue实现拖拽排序、移除">vue实现拖拽排序、移除</a></li>
-                        <li class="py-2"><a href="/news/article-83733.htm" title="猫打3针疫苗多少钱（猫猫打三针多少钱）">猫打3针疫苗多少钱（猫猫打三针多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-81602.htm" title="宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）">宠物领养证办理需要什么条件和手续费（宠物领养证如何办理）</a></li>
-                        <li class="py-2"><a href="/news/article-85165.htm" title="为什么代码规范要求SQL语句不要过多的join？">为什么代码规范要求SQL语句不要过多的join？</a></li>
-                        <li class="py-2"><a href="/news/article-97654.htm" title="动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）">动物疫苗不冷藏可以放多久（动物疫苗未冷藏几小时失效）</a></li>
-                        <li class="py-2"><a href="/news/article-91721.htm" title="liunx中搭建python3.7环境和安装pycharm并搭建Django">liunx中搭建python3.7环境和安装pycharm并搭建Django</a></li>
-                        <li class="py-2"><a href="/news/article-101270.htm" title="Python实现双X轴双Y轴绘图">Python实现双X轴双Y轴绘图</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-14-free-high-speed-nodes.htm" title="4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">4月14日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-25-free-node-subscribe.htm" title="3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月25日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-subscribe-node.htm" title="3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-85881.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-2-node-share-links.htm" title="4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">4月2日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-83734.htm" title="动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集">动物疫苗价格查询表图片及价格大全 动物疫苗价格查询表图片及价格大全集</a></li>
+                        <li class="py-2"><a href="/news/article-70777.htm" title="瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）">瑞鹏宠物医院好不好（瑞鹏宠物医院大众点评）</a></li>
+                        <li class="py-2"><a href="/news/article-73431.htm" title="厦门同安宠物领养中心地址电话 厦门同安宠物领养中心地址电话号码">厦门同安宠物领养中心地址电话 厦门同安宠物领养中心地址电话号码</a></li>
+                        <li class="py-2"><a href="/news/article-65668.htm" title="给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）">给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）</a></li>
+                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
+                        <li class="py-2"><a href="/news/article-92438.htm" title="vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】">vue打包后整合到springboot项目、并打包成jar上传到Linux服务器运行【前后端分离开发、整体部署到Linux服务器】</a></li>
                     </ul>
     </div>
 </div>
@@ -198,7 +198,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">72</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">84</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
